--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.shwetadsa.bets.Register">
+    tools:context="com.shwetadsa.bets.Register"
+    android:background="@drawable/regi">
 
     <TextView
         android:id="@+id/tvSignup"
@@ -12,7 +13,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="19dp"
         android:text="Create your new account!"
         android:textSize="18dp"
         android:textStyle="bold" />
@@ -24,12 +24,13 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/tvSignup"
-        android:layout_marginLeft="17dp"
-        android:layout_marginStart="17dp"
-        android:layout_marginTop="19dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="30dp"
         android:background="@drawable/border"
         android:ems="10"
         android:hint="First Name"
+        android:textColorHint="#000000"
         android:inputType="textPersonName" />
 
     <EditText
@@ -40,12 +41,11 @@
         android:layout_alignBottom="@+id/etFname"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginEnd="21dp"
-        android:layout_marginRight="21dp"
         android:background="@drawable/border"
         android:ems="10"
         android:hint="Last Name"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:textColorHint="#000000" />
 
     <EditText
         android:id="@+id/etMail"
@@ -58,7 +58,8 @@
         android:background="@drawable/border"
         android:ems="10"
         android:hint="Email Address "
-        android:inputType="textEmailAddress" />
+        android:inputType="textEmailAddress"
+        android:textColorHint="#000000"/>
 
     <EditText
         android:id="@+id/etContact"
@@ -71,7 +72,8 @@
         android:ems="10"
         android:inputType="number"
         android:hint="Contact No. "
-        android:background="@drawable/border"/>
+        android:background="@drawable/border"
+        android:textColorHint="#000000"/>
 
     <EditText
         android:id="@+id/etUname"
@@ -84,7 +86,8 @@
         android:background="@drawable/border"
         android:ems="10"
         android:hint="Enter Username"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:textColorHint="#000000"/>
 
     <EditText
         android:id="@+id/etPass"
@@ -97,7 +100,8 @@
         android:background="@drawable/border"
         android:ems="10"
         android:hint="Enter Password"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:textColorHint="#000000"/>
 
     <EditText
         android:id="@+id/etCpass"
@@ -110,7 +114,8 @@
         android:background="@drawable/border"
         android:ems="10"
         android:hint="Re-enter Password"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:textColorHint="#000000"/>
 
     <Button
         android:id="@+id/btnSignup"
@@ -130,15 +135,16 @@
         android:layout_alignStart="@+id/etContact"
         android:layout_below="@+id/etContact"
         android:layout_marginTop="18dp"
-        android:text="Your Location:" />
+        android:text="Your Location:"
+        android:textColor="#000000"/>
 
     <Spinner
         android:id="@+id/spnLoc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/etAge"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
+        android:layout_below="@+id/etContact"
         android:layout_toEndOf="@+id/tvLoc"
         android:layout_toRightOf="@+id/tvLoc" />
 
@@ -153,6 +159,7 @@
         android:background="@drawable/border"
         android:ems="10"
         android:hint="Enter age"
-        android:inputType="number" />
+        android:inputType="number"
+        android:textColorHint="#000000"/>
 
 </RelativeLayout>
